[gd_scene load_steps=18 format=2]

[ext_resource path="res://MobileRPG Resources practice/Images/Mobile RPG Mockup.png" type="Texture" id=1]
[ext_resource path="res://Slime.tscn" type="PackedScene" id=2]
[ext_resource path="res://MobileRPG Resources practice/Images/Dungeon.png" type="Texture" id=3]
[ext_resource path="res://Battle.gd" type="Script" id=4]
[ext_resource path="res://DefaultTheme.tres" type="Theme" id=5]
[ext_resource path="res://PlayerStats.gd" type="Script" id=6]
[ext_resource path="res://StatsPanel.gd" type="Script" id=7]
[ext_resource path="res://SwordActionButton.tscn" type="PackedScene" id=8]
[ext_resource path="res://HealActionButton.tscn" type="PackedScene" id=9]
[ext_resource path="res://Rat.tscn" type="PackedScene" id=10]
[ext_resource path="res://Asserts/character_Defender.png" type="Texture" id=11]
[ext_resource path="res://Asserts/character_Healer.png" type="Texture" id=12]
[ext_resource path="res://Asserts/Boss001.png" type="Texture" id=13]
[ext_resource path="res://Asserts/character_Attacker.png" type="Texture" id=14]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="Animation" id=1]
resource_name = "FadetoNewRoom"
length = 0.5
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.35, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Fade:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[node name="Battle" type="Node"]
script = ExtResource( 4 )
enemies = [ ExtResource( 10 ), ExtResource( 2 ) ]

[node name="PlayerStats" type="Node" parent="."]
script = ExtResource( 6 )

[node name="Dungeon" type="Sprite" parent="."]
position = Vector2( 45, 80 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="EnemyPosition" type="Position2D" parent="."]
position = Vector2( 46, 26 )

[node name="Slime" parent="EnemyPosition" instance=ExtResource( 2 )]

[node name="MobileRpgMockup" type="Sprite" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.14902 )
position = Vector2( 45, 80 )
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="UI"]
margin_right = 90.0
margin_bottom = 47.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextRoomButton" type="Button" parent="UI/CenterContainer"]
visible = false
margin_left = 10.0
margin_top = 17.0
margin_right = 80.0
margin_bottom = 30.0
rect_min_size = Vector2( 70, 13 )
text = "ENTER NEXT ROOM"

[node name="StatsPanel" type="Panel" parent="UI"]
margin_left = 3.0
margin_top = 47.0
margin_right = 87.0
margin_bottom = 70.0
script = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="StatsContainer" type="HBoxContainer" parent="UI/StatsPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 1
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="HP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_top = 4.0
margin_right = 27.0
margin_bottom = 19.0
rect_min_size = Vector2( 12, 15 )
size_flags_horizontal = 3
text = "HP

25"
align = 1
valign = 1

[node name="AP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 28.0
margin_top = 4.0
margin_right = 55.0
margin_bottom = 19.0
rect_min_size = Vector2( 12, 15 )
size_flags_horizontal = 3
text = "AP

3"
align = 1
valign = 1

[node name="MP" type="Label" parent="UI/StatsPanel/StatsContainer"]
margin_left = 56.0
margin_top = 4.0
margin_right = 84.0
margin_bottom = 19.0
rect_min_size = Vector2( 12, 15 )
size_flags_horizontal = 3
text = "MP

10"
align = 1
valign = 1

[node name="TextboxPanel" type="Panel" parent="UI"]
margin_left = -2.0
margin_top = 138.0
margin_right = 92.0
margin_bottom = 161.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Textbox" type="RichTextLabel" parent="UI/TextboxPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_constants/line_separation = 2
custom_styles/normal = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleActionButtons" type="GridContainer" parent="UI"]
margin_left = 10.0
margin_top = 73.0
margin_right = 82.0
margin_bottom = 134.0
custom_constants/vseparation = 3
custom_constants/hseparation = 8
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SwordActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 8 )]

[node name="HealActionButton" parent="UI/BattleActionButtons" instance=ExtResource( 9 )]
margin_left = 40.0
margin_right = 72.0

[node name="Fade" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadetoNewRoom = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Player 1 (Atk)" type="Node2D" parent="."]
position = Vector2( 151, 101 )
__meta__ = {
"_edit_group_": true
}

[node name="CharacterAttacker" type="Sprite" parent="Player 1 (Atk)"]
position = Vector2( -1.90735e-06, 3.8147e-06 )
scale = Vector2( 0.0855555, 0.0888889 )
texture = ExtResource( 14 )

[node name="Label" type="Label" parent="Player 1 (Atk)"]
margin_left = -21.0
margin_top = -35.0
margin_right = 23.0
margin_bottom = -21.0
text = "25 Hp"

[node name="Player 2 (Def)" type="Node2D" parent="."]
position = Vector2( 193, 101 )
__meta__ = {
"_edit_group_": true
}

[node name="CharacterDefender" type="Sprite" parent="Player 2 (Def)"]
position = Vector2( 1.52588e-05, 7.62939e-06 )
scale = Vector2( 0.0863889, 0.087963 )
texture = ExtResource( 11 )

[node name="Label" type="Label" parent="Player 2 (Def)"]
margin_left = -21.0
margin_top = -35.0
margin_right = 23.0
margin_bottom = -21.0
text = "25 Hp"

[node name="Player 3 (Heal)" type="Node2D" parent="."]
position = Vector2( 236, 102 )
__meta__ = {
"_edit_group_": true
}

[node name="CharacterDefender" type="Sprite" parent="Player 3 (Heal)"]
position = Vector2( 1.52588e-05, 7.62939e-06 )
scale = Vector2( 0.0863889, 0.087963 )
texture = ExtResource( 12 )

[node name="Label" type="Label" parent="Player 3 (Heal)"]
margin_left = -21.0
margin_top = -35.0
margin_right = 23.0
margin_bottom = -21.0
text = "25 Hp"

[node name="Boss (Enemy)" type="Node2D" parent="."]
position = Vector2( -90, 100 )
__meta__ = {
"_edit_group_": true
}

[node name="CharacterDefender" type="Sprite" parent="Boss (Enemy)"]
position = Vector2( 1.52588e-05, 7.62939e-06 )
scale = Vector2( 0.0863889, 0.087963 )
texture = ExtResource( 13 )

[node name="Label" type="Label" parent="Boss (Enemy)"]
margin_left = -21.0
margin_top = -35.0
margin_right = 23.0
margin_bottom = -21.0
text = "25 Hp"

[connection signal="ap_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_ap_changed"]
[connection signal="hp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_hp_changed"]
[connection signal="mp_changed" from="PlayerStats" to="UI/StatsPanel" method="_on_PlayerStats_mp_changed"]
[connection signal="pressed" from="UI/CenterContainer/NextRoomButton" to="." method="_on_NextRoomButton_pressed"]
